synchronize from Yefremov

--- a/PC_EKKA.ini
+++ b/PC_EKKA.ini
@@ -28,8 +28,8 @@ ServerName=sergey
 BaseName=APTEKA_NET
 BaseUser=sa	
 BasePassw=
-TypeEKKA=6
-PortNum=1
+TypeEKKA=1
+PortNum=3
 UseEKKA=1
 Camera=0
 FlashPath=G:\
@@ -580,7 +580,7 @@ CHPAddr=пр. Ленина, 9 (Энергосталь)
 ShowMCash=1
 
 [WorkEKKAPROLET]
-KassaID=3
+KassaID=2
 ServerName=10.44.20.10
 BaseName=APTEKA_NET
 BaseUser=sa
@@ -1710,7 +1710,8 @@ BaseName=APTEKA_NET
 BaseUser=sa
 BasePassw=
 PortNum=1
-UseEKKA=0
+TypeEKKA=5
+UseEKKA=1
 Camera=0
 FlashPath=G:\
 TimeZ=23:59:59
@@ -1723,6 +1724,7 @@ SMTPHost=smtp.vk.kh.ua
 SMTPPort=25
 EMailAddress=dwsergio@ukr.net
 ShowMCash=1
+IPAddrEKKA=192.168.104.131
 
 [WorkEKKASOLONIC]
 KassaID=1
