--- a/PC_EKKA.ini
+++ b/PC_EKKA.ini
@@ -23,33 +23,103 @@ IsNewVersion=1
 ShowMCash=1
 
 [WorkEKKA]
-KassaID=1
-ServerName=sergey
+##SQLProvider:String;    // Провайдер SQL (начиная с SQL2005 он другой чем в 2000)
+_SQLProvider=SQLNCli.1
+##Server:String;         // Имя сервера
+_ServerName=10.128.19.11
+__ServerName=malakhov\SQL2014
+ServerName=yeshchenko\SQL2017
+
+_ServerName=test_sql\BH
+_ServerName=test_sql\KUR
+##Base:String;           // Имя базы
 BaseName=APTEKA_NET
-BaseUser=sa	
-BasePassw=
-TypeEKKA=1
-PortNum=3
-UseEKKA=1
+##BaseUser:String;       // Имя пользователя базы данных
+BaseUser=sa
+##BasePassw:String;      // Пароль базы данных
+BasePassw=23Qwerty
+_BasePassw=
+##Camera:Integer;        // Есть ли камера (1 - есть, 0 - нету)
 Camera=0
-FlashPath=G:\
-TimeZ=20:30:00
-FirmID=2
-LoadNaklPath=D:\AVA
-LogPath=C:\Log
-ServerLogPath=\\192.168.0.179\Log
-UseIndicator=0
-ShowMCash=1
-ShowRegFull=1
-PrintPort=\\192.168.4.100
-EmulEKKA=0
-EKKAAsPrinter=0
-NumPortTerminal=3
-NumPortEkran=12
+##WebCamera:Integer;     // Есть ли web-камера (1 - есть, 0 - нету)
 WebCamera=0
+##KassaID:Integer;       // Номер кассы
+KassaID=2
+##FlashPath:String;      // Путь выгрузки остатков
+FlashPath=F:\
+##TimeZ:TDateTime;       // Время Выдачи
+TimeZ=23:59:59
+##LoadNaklPath:String;   // Путь выгрузки накладных
+LoadNaklPath=\\test_sql\AVA
+##LogPath:String;        // Локальный путь для загрузки файлов
+LogPath=C:\Log
+##ServerLogPath:String;  // Сетевой путь для папки Log
+ServerLogPath=\\server\Log
+##ServerAVAPath:String;  // Сетевой путь для папки AVA
+##ServerWorkPath:String; //
+##SMTPHost:String;       // Адрес почтового сервера
+SMTPHost=193.111.239.65
+##SMTPPort:Integer;      // Порт по которому будет осуществляться подключение
+SMTPPort=25
+##EMailAddress:String;   // Адрес электронной почты
+EMailAddress=root@gamma55.com.ua
+##CHPName:String;        // Имя ЧП
+##CHPIndN:String;        // Идентификационный код ЧП
+##CHPAddr:String;        // Адрес ЧП
+##PrintPort:String;      // Порт принтера для печати чеков ЧП
+PrintPort=\\192.168.104.201
+##ShowMCash:Boolean;     // Признак видимости окна сдачи
+ShowMCash=0
+##ShowRegFull:Boolean;   // Показывать / скрыть полки срок карантин
+##EKKAAsPrinter:Boolean; // Принтер вместо кассового аппарата
+EKKAAsPrinter=0
+##----------------------------------
+##NumPortTerminal:Integer;    // Номер СОМ-порта для терминала: 1000 - COM-порт автоматически; 1,2,3... - номер COM-порта
+NumPortTerminal=3
+##UseTerminal:Boolean;        // Обязательно использовать терминал
+UseTerminal=1
+##BaudRateTerminal:Longint    //скорость подключения к терминалу по COM-порту
+BaudRateTerminal=19200
+##TcpIpAddressTerminal:string //TPC-IP-адрес терминала
+TcpIpAddressTerminal=192.168.104.9
+##TcpIpPortTerminal:integer   //TCP-IP порт терминала
+TcpIpPortTerminal=2000
+##TypeTerminal: byte;         //тип банковского терминала: 0: ECRCommX.ECRLibSgn; 1 - ECRCommX.BPOS1Lib/Comm; 2 - ECRCommX.BPOS1Lib/CommAuto; 3 - ECRCommX.BPOS1Lib/TCP-IP
+TypeTerminal=3
+##----------------------------------
+##EmulEKKA:Boolean;
+EmulEKKA=0
+##балалайка
+_EmulEKKA=1
+##NumPortEkran:Integer;
+NumPortEkran=12
+##PlayRolik:Boolean;     // Касса, где проигравается рекламный ролик
 PlayRolik=0
-VolumeRolik=15008
-IPAddrEKKA=192.168.104.63
+##VolumeRolik:Integer;   // Уровень громкости проигрывания ролика
+VolumeRolik=65535
+##IsAutoZ:Boolean;       // Автоматичекое снятие Z для отдельных касс
+##IPAddrEKKA:String;     // IP-адресс для EKKA MG N707TS
+##StartFromApteksInfo:Boolean;
+_PortNum=4
+PortNum=1
+##Datecs101BaudRate: integer;
+Datecs101BaudRate=9600
+##балалайка
+_UseEKKA=0
+UseEKKA=1
+## 1 - балалайка
+_TypeEKKA=1
+TypeEKKA=5
+#property Datecs101OperatorNum: byte read GetDatecs101OperatorNum write FDatecs101OperatorNum;  //номер оператора Datecs101
+#property Datecs101POSNum: integer read GetDatecs101POSNum write FDatecs101POSNum;  //Номер рабочего места Datecs101
+UseIndicator=1
+FirmName=ПФ "Гамма-55"
+
+_IPAddrEKKA=10.44.23.201
+_IPAddrEKKA=192.168.106.130
+IPAddrEKKA=192.168.104.131
+FirmID=2
+ShowRegFull=1
 
 [WorkEKKA2005]
 KassaID=1
@@ -580,7 +650,7 @@ CHPAddr=пр. Ленина, 9 (Энергосталь)
 ShowMCash=1
 
 [WorkEKKAPROLET]
-KassaID=2
+KassaID=3
 ServerName=10.44.20.10
 BaseName=APTEKA_NET
 BaseUser=sa
@@ -1710,8 +1780,7 @@ BaseName=APTEKA_NET
 BaseUser=sa
 BasePassw=
 PortNum=1
-TypeEKKA=5
-UseEKKA=1
+UseEKKA=0
 Camera=0
 FlashPath=G:\
 TimeZ=23:59:59
@@ -1724,7 +1793,6 @@ SMTPHost=smtp.vk.kh.ua
 SMTPPort=25
 EMailAddress=dwsergio@ukr.net
 ShowMCash=1
-IPAddrEKKA=192.168.104.131
 
 [WorkEKKASOLONIC]
 KassaID=1
