проверка номера карточки по СМС

--- a/PC_EKKA.ini
+++ b/PC_EKKA.ini
@@ -26,9 +26,9 @@ ShowMCash=1
 ##SQLProvider:String;    // Провайдер SQL (начиная с SQL2005 он другой чем в 2000)
 _SQLProvider=SQLNCli.1
 ##Server:String;         // Имя сервера
-_ServerName=10.128.19.11
+ServerName=10.44.4.10
 __ServerName=malakhov\SQL2014
-ServerName=yeshchenko\SQL2017
+__ServerName=yeshchenko\SQL2017
 
 _ServerName=test_sql\BH
 _ServerName=test_sql\KUR
@@ -37,8 +37,8 @@ BaseName=APTEKA_NET
 ##BaseUser:String;       // Имя пользователя базы данных
 BaseUser=sa
 ##BasePassw:String;      // Пароль базы данных
-BasePassw=23Qwerty
-_BasePassw=
+__BasePassw=23Qwerty
+BasePassw=
 ##Camera:Integer;        // Есть ли камера (1 - есть, 0 - нету)
 Camera=0
 ##WebCamera:Integer;     // Есть ли web-камера (1 - есть, 0 - нету)
@@ -118,7 +118,7 @@ FirmName=ПФ "Гамма-55"
 _IPAddrEKKA=10.44.23.201
 _IPAddrEKKA=192.168.106.130
 IPAddrEKKA=192.168.104.131
-FirmID=2
+_FirmID=2
 ShowRegFull=1
 
 [WorkEKKA2005]
