--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,35 @@
 *.cfg
-*.dcr
 *.ddp
-*.dcu
 ~*
 ~*.*
-*.dll
 *.bak
-*.exe
 *.dof
 *.0*
 *.upx
 *.~*
+
+*.exe
+*.bpl
+*.bpi
+*.dcp
+*.so
+*.apk
+*.drc
+*.map
+*.dres
+*.rsm
+*.tds
+*.dcu
+*.lib
+*.a
+*.o
+*.ocx
+
+*.local
+*.identcache
+*.projdata
+*.tvsconfig
+*.dsk
+
+__history/
+__recovery/
