--- a/PC_EKKA.ini
+++ b/PC_EKKA.ini
@@ -26,7 +26,7 @@ ShowMCash=1
 ##SQLProvider:String;    // Провайдер SQL (начиная с SQL2005 он другой чем в 2000)
 _SQLProvider=SQLNCli.1
 ##Server:String;         // Имя сервера
-_ServerName=10.128.19.11
+_ServerName=10.11.166.13
 __ServerName=malakhov\SQL2014
 ServerName=yeshchenko\SQL2017
 
@@ -88,9 +88,9 @@ TcpIpPortTerminal=2000
 TypeTerminal=3
 ##----------------------------------
 ##EmulEKKA:Boolean;
-EmulEKKA=0
+_EmulEKKA=0
 ##балалайка
-_EmulEKKA=1
+EmulEKKA=1
 ##NumPortEkran:Integer;
 NumPortEkran=12
 ##PlayRolik:Boolean;     // Касса, где проигравается рекламный ролик
@@ -108,8 +108,8 @@ Datecs101BaudRate=9600
 _UseEKKA=0
 UseEKKA=1
 ## 1 - балалайка
-_TypeEKKA=1
-TypeEKKA=5
+TypeEKKA=1
+_TypeEKKA=5
 #property Datecs101OperatorNum: byte read GetDatecs101OperatorNum write FDatecs101OperatorNum;  //номер оператора Datecs101
 #property Datecs101POSNum: integer read GetDatecs101POSNum write FDatecs101POSNum;  //Номер рабочего места Datecs101
 UseIndicator=1
@@ -117,7 +117,7 @@ FirmName=ПФ "Гамма-55"
 
 _IPAddrEKKA=10.44.23.201
 _IPAddrEKKA=192.168.106.130
-IPAddrEKKA=192.168.104.131
+_IPAddrEKKA=192.168.104.131
 FirmID=2
 ShowRegFull=1
 
